fix separator z-index

--- a/pages/Layout/Separator/Separator.css
+++ b/pages/Layout/Separator/Separator.css
@@ -28,6 +28,7 @@
     left: 0;
     right: 0;
     bottom: 0;
+    z-index:9999;
 }
 
 .layout-separator.row > .layout-separator-offset {
